Cambios en las hojas de estilo, e index, iconos agregados.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-VE">
 
   <head>
     <meta charset="utf-8"/>
@@ -31,7 +31,7 @@
       </div>
 
       <div id="welcome">
-        <p id="welcome-text">Hola bienvenido, mi nombre es Orlando Pernia soy desarrollador Web Junior.<br><br>ZERO+PLUS es mi proyecto freelance, en el cual ofrezco mis habilidades en diseño y creación de páginas Web en el área del frontend, además de enlaces a mi portafolios el cual se compone de páginas Web hechas a mis clientes, proyectos personales, maquetados y proyectos realizados en freeCodeCamp.<br><br>Los servicios que ofrezco por los momentos son: diseño, maquetado y creación de páginas web para individuos y pequeñas empresas, currículos personalizados para compartir en tu pagina web e imprimir. Espero disfruten su visita en el sitio.</p>
+        <p id="welcome-text">Hola bienvenido, mi nombre es Orlando Pernia soy desarrollador frontend Junior.<br><br>ZERO+PLUS es mi proyecto freelance, en el cual ofrezco mis habilidades en diseño y creación de páginas Web en el área del frontend, además de enlaces a mi portafolios el cual se compone de páginas Web hechas a mis clientes, proyectos personales, maquetados y proyectos realizados en freeCodeCamp.<br><br>Los servicios que ofrezco por los momentos son: diseño, maquetado y creación de páginas web para individuos y pequeñas empresas, currículos personalizados para compartir en tu pagina web e imprimir. Espero disfruten su visita en el sitio.</p>
       </div>
 
       <div id="portfolio">
@@ -50,15 +50,38 @@
         <div class="portfolio fcc-4"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/vYGGdrZ" target="_blank" rel="noreferrer"><img src="images/thumb04.webp" alt="project thumbnail">Página de documentación</a></div>
         <div class="portfolio-button button-3"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
 
-        <h1 id="portfolio-title-four">Portafolios: maquetas/mockups.</h1>
-        <div class="portfolio mockup-1"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_bakery/" target="_blank" rel="noreferrer"><img src="images/thumb07.webp" alt="project thumbnail">Maqueta/mockup Bakery</a></div>
-        <div class="portfolio mockup-2"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_celebrity/" target="_blank" rel="noreferrer"><img src="images/thumb08.webp" alt="project thumbnail">Maqueta/mockup Celebrity</a></div>
-        <!--div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/" target="_blank" rel="noreferrer"><img src="images/thumb09.webp" alt="project thumbnail">Maqueta/mockup Landing Page</a></div-->
+        <h1 id="portfolio-title-four">Portafolios: maquetas.</h1>
+        <div class="portfolio mockup-1"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_bakery/" target="_blank" rel="noreferrer"><img src="images/thumb07.webp" alt="project thumbnail">Maqueta Bakery</a></div>
+        <div class="portfolio mockup-2"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_celebrity/" target="_blank" rel="noreferrer"><img src="images/thumb08.webp" alt="project thumbnail">Maqueta Celebrity</a></div>
+        <!--div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/" target="_blank" rel="noreferrer"><img src="images/thumb09.webp" alt="project thumbnail">Maqueta Landing Page</a></div-->
         <div class="portfolio-button button-4"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
       </div>
 
       <footer id="footer">
-        <p id="copyright">&copy; 2020 - 2021 ZERO+PLUS</p>
+        <div id="contact">
+          <ul id="contact-list">
+            <p id="contact-text">Contacto:</p>
+            <li class="contact-link">
+              <a href="https://www.linkedin.com/in/orlando-pernia-15a064203/" target="_blank" rel="noreferrer"><img class="img-contact" src="images/icons/linkedin-white.svg" alt="contact icon" title="LinkedIn"></a>
+            </li>
+            <li class="contact-link">
+              <a href="https://fiverr.com/enjeruzero" target="_blank" rel="noreferrer"><img class="img-contact" src="images/icons/fiverr-white.svg" alt="contact icon" title="fiverr"></a>
+            </li>
+            <!--li class="contact-link">
+              <a href="#" target="_blank" rel="noreferrer"><img class="img-contact" src="images/icons/telegram-white.svg" alt="contact icon" title="Telegram"></a>
+            </li-->
+            <li class="contact-link">
+              <a href="https://api.whatsapp.com/send?phone=+584247521769" target="_blank" rel="noreferrer"><img class="img-contact" src="images/icons/whatsapp-white.svg" alt="contact icon" title="WhatsApp"></a>
+            </li>
+            <li class="contact-link">
+              <a href="mailto:angelus078@gmail.com" target="_blank" rel="noreferrer"><img class="img-contact" src="images/icons/email-white.svg" alt="contact icon" title="e-mail"></a>
+            </li>
+          </ul>
+        </div>
+        <div id="copyright">
+          <p id="copy-text">&copy; 2020 - 2021 ZERO+PLUS</p>
+        </div>
+        <div id="margin"></div>
       </footer>
     </div>
     <script src="javascript/javascript.js"></script>
