--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </ul>
         </div>
         <div id="copyright">
-          <p id="copy-text">&copy; 2020 - 2021 ZERO+PLUS</p>
+          <p id="copy-text">&copy; 2020 - <span id="year"></span> ZERO+PLUS</p>
         </div>
         <div id="margin"></div>
       </footer>
