Agregada carpeta mockup_landing.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1 id="portfolio-title-four">Portafolios: maquetas.</h1>
         <div class="portfolio mockup-1"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_bakery/" target="_blank" rel="noreferrer"><img src="images/thumb07.webp" alt="project thumbnail">Maqueta Bakery</a></div>
         <div class="portfolio mockup-2"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_celebrity/" target="_blank" rel="noreferrer"><img src="images/thumb08.webp" alt="project thumbnail">Maqueta Celebrity</a></div>
-        <!--div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/" target="_blank" rel="noreferrer"><img src="images/thumb09.webp" alt="project thumbnail">Maqueta Landing Page</a></div-->
+        <div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/" target="_blank" rel="noreferrer"><img src="images/thumb09.webp" alt="project thumbnail">Maqueta Landing</a></div>
         <div class="portfolio-button button-4"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
       </div>
 
