--- a/mockup_landing/index.html
+++ b/mockup_landing/index.html
@@ -13,8 +13,8 @@
     <script src="https://kit.fontawesome.com/4cd87bf5ed.js" crossorigin="anonymous"></script>
   </head>
 
-  <body class="overflow-x-hidden box-border select-none">
-    <div class="flex flex-col md:flex-row bg-blue-700 w-full h-screen">
+  <body class="w-full box-border select-none">
+    <div class="overflow-hidden flex flex-col md:flex-row bg-blue-700 w-full h-screen">
       <div class="flex flex-col justify-around items-center w-full md:w-1/2">
         <img class="w-36 md:w-56 h-36 md:h-56 border-4 rounded-lg p-2 mt-12 md:mt-0" src="images/logo.jpeg" alt="Logo del sitio">
         <p class="font-poppins font-bold uppercase mx-8 py-8 text-white text-6xl text-center">Mockup Landing</p>
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col md:flex-row w-full h-full md:h-96 bg-blue-700 border-t-8 border-blue-400">
+    <div class="overflow-hidden flex flex-col md:flex-row w-full h-full md:h-96 bg-blue-700 border-t-8 border-blue-400">
       <div class="overflow-hidden w-full md:w-1/2 h-48 md:h-full md:ml-10 transform -skew-x-12">
         <div
           class="h-full -mx-10 bg-about bg-cover transform skew-x-12">
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col md:flex-row w-full h-full md:h-96 bg-blue-700 border-t-8 border-blue-400">
+    <div class="overflow-hidden flex flex-col md:flex-row w-full h-full md:h-96 bg-blue-700 border-t-8 border-blue-400">
       <div class="w-full md:w-1/2 h-full bg-blue-700 flex flex-col justify-around items-center">
         <p class="font-poppins text-4xl md:text-6xl text-white mt-2 md:mt-0 border-r-8 pr-4"><span class="font-bold text-blue-400">O</span>ur Mission</p>
         <p class="font-poppins text-base md:text-xl text-white text-justify leading-2 tracking-tight my-2 p-4 md:px-10">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus veniam deleniti minima quo consequatur, iusto earum laborum atque ullam? Perspiciatis, nostrum harum dolorem fugit alias fugiat eveniet sint mollitia perferendis.</p>
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col md:flex-row w-full h-full md:h-96 bg-blue-700 border-t-8 border-blue-400">
+    <div class="overflow-hidden flex flex-col md:flex-row w-full h-full md:h-96 bg-blue-700 border-t-8 border-blue-400">
       <div
       class="overflow-hidden w-full md:w-1/2 h-48 md:h-full md:ml-10 transform -skew-x-12">
         <div class="h-full -mx-10 bg-goal bg-cover transform skew-x-12"></div>
@@ -57,14 +57,14 @@
       </div>
     </div>
 
-    <footer class="w-full p-4 font-poppins bg-blue-400">
+    <footer class="overflow-hidden w-full p-4 font-poppins bg-blue-400">
       <div class="flex flex-col md:flex-row">
         <div class="md:w-1/2 mx-2">
-          <p class="text-white text-3xl font-bold mb-2 pl-2">Name</p>
+          <p class="text-white text-xl md:text-3xl font-bold mb-2 pl-2">Name</p>
           <input class="w-full p-2" type="text" placeholder="Tu name, ex: John Doe">
-          <p class="text-white text-3xl font-bold mb-2 mt-4 pl-2">Email</p>
+          <p class="text-white text-xl md:text-3xl font-bold mb-2 mt-4 pl-2">Email</p>
           <input class="w-full p-2" type="email" placeholder="Your email, ex: user@site.com">
-          <p class="text-white text-3xl font-bold mb-2 mt-4 pl-2">Message</p>
+          <p class="text-white text-xl md:text-3xl font-bold mb-2 mt-4 pl-2">Message</p>
           <textarea class="w-full p-2 h-24" name="mensaje"></textarea>
           <button class="md:w-full font-bold text-white bg-blue-700 mt-4 px-10 md:px-0 py-2 focus:outline-none active:bg-blue-300">SEND</button>
         </div>
