Cambios en index.

--- a/mockup_landing/index.html
+++ b/mockup_landing/index.html
@@ -61,7 +61,7 @@
       <div class="flex flex-col md:flex-row">
         <div class="md:w-1/2 mx-2">
           <p class="text-white text-xl md:text-3xl font-bold mb-2 pl-2">Name</p>
-          <input class="w-full p-2" type="text" placeholder="Tu name, ex: John Doe">
+          <input class="w-full p-2" type="text" placeholder="Your name, ex: John Doe">
           <p class="text-white text-xl md:text-3xl font-bold mb-2 mt-4 pl-2">Email</p>
           <input class="w-full p-2" type="email" placeholder="Your email, ex: user@site.com">
           <p class="text-white text-xl md:text-3xl font-bold mb-2 mt-4 pl-2">Message</p>
