Descripcion cambiada en index.

--- a/mockup_landing/index.html
+++ b/mockup_landing/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
-    <meta name="Description" content="Celebrity/Influencer."/>
+    <meta name="Description" content="Landing site mockup."/>
     <title>Mockup Landing</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="shortcut icon" href="images/logo.jpeg" type="image/x-icon">
