Cambios en el estilo, y backgrounds en index.

--- a/mockup_landing/index.html
+++ b/mockup_landing/index.html
@@ -16,17 +16,17 @@
   <body class="w-full box-border select-none">
     <div class="overflow-hidden flex flex-col md:flex-row bg-blue-700 w-full h-screen">
       <div class="flex flex-col justify-around items-center w-full md:w-1/2">
-        <img class="w-36 md:w-56 h-36 md:h-56 border-4 rounded-lg p-2 mt-12 md:mt-0" src="images/logo.jpeg" alt="Logo del sitio">
-        <p class="font-poppins font-bold uppercase mx-8 py-8 text-white text-6xl text-center">Mockup Landing</p>
+        <img class="w-36 md:w-72 h-36 md:h-72 border-4 rounded-lg p-2 mt-12 md:mt-0 mb-12 md:mb-0" src="images/logo.jpeg" alt="Logo del sitio">
       </div>
-      <div class="bg-hero-banner w-full md:w-1/2 h-full bg-no-repeat bg-cover">
+      <div class="overflow-hidden w-full md:w-1/2 h-full transform skew-x-6">
+        <div class="h-full -mx-10 bg-hero-banner bg-no-repeat bg-cover transform -skew-x-6"></div>
       </div>
     </div>
 
     <div class="overflow-hidden flex flex-col md:flex-row w-full h-full md:h-96 bg-blue-700 border-t-8 border-blue-400">
       <div class="overflow-hidden w-full md:w-1/2 h-48 md:h-full md:ml-10 transform -skew-x-12">
         <div
-          class="h-full -mx-10 bg-about bg-cover transform skew-x-12">
+          class="h-full -mx-10 bg-about bg-cover bg-bottom transform skew-x-12">
         </div>
       </div>
       <div class="w-full md:w-1/2 h-full bg-blue-700 flex flex-col justify-around items-center">
@@ -42,14 +42,14 @@
       </div>
       <div
       class="overflow-hidden w-full md:w-1/2 h-48 md:h-full md:mr-10 transform -skew-x-12">
-        <div class="h-full -mx-10 bg-mission bg-cover transform skew-x-12"></div>
+        <div class="h-full -mx-10 bg-mission bg-cover bg-center transform skew-x-12"></div>
       </div>
     </div>
 
     <div class="overflow-hidden flex flex-col md:flex-row w-full h-full md:h-96 bg-blue-700 border-t-8 border-blue-400">
       <div
       class="overflow-hidden w-full md:w-1/2 h-48 md:h-full md:ml-10 transform -skew-x-12">
-        <div class="h-full -mx-10 bg-goal bg-cover transform skew-x-12"></div>
+        <div class="h-full -mx-10 bg-goal bg-cover bg-center transform skew-x-12"></div>
       </div>
       <div class="w-full md:w-1/2 h-full bg-blue-700 flex flex-col justify-around items-center">
         <p class="font-poppins text-4xl md:text-6xl text-white mt-2 md:mt-0 border-l-8 pl-4"><span class="font-bold text-blue-400">O</span>ur Goal</p>
@@ -98,10 +98,10 @@
         ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 Background(s)/image(s) used are from:
-- Photo from Mission 1 from DOOM Eternal copyright to Bethesda.
+- Glenn Carstens-Peters: https://unsplash.com/photos/npxXWgQ33ZQ
 - LYCS Architecture: https://unsplash.com/photos/U2BI3GMnSSE
 - Brett Jordan: https://unsplash.com/photos/hjI67-48t5I
-- Bernanrd Hermant: https://unsplash.com/photos/z9AOxTYQBy4
+- Aron Visuals: https://unsplash.com/photos/3jBU9TbKW7o
 
 Icon(s) used are from:
 - Fontawesome: https://www.fontawesome.com
