Cambio en carpeta mockup_landing

--- a/mockup_landing/index.html
+++ b/mockup_landing/index.html
@@ -18,8 +18,8 @@
       <div class="flex flex-col justify-around items-center w-full md:w-1/2">
         <img class="w-36 md:w-72 h-36 md:h-72 border-4 rounded-lg p-2 mt-12 md:mt-0 mb-12 md:mb-0" src="images/logo.jpeg" alt="Logo del sitio">
       </div>
-      <div class="overflow-hidden w-full md:w-1/2 h-full transform skew-x-6">
-        <div class="h-full -mx-10 bg-hero-banner bg-no-repeat bg-cover transform -skew-x-6"></div>
+      <div class="overflow-hidden w-full md:w-1/2 h-full md:mr-8 transform -skew-x-6">
+        <div class="h-full -mx-10 bg-hero-banner bg-no-repeat bg-cover transform skew-x-6"></div>
       </div>
     </div>
 
@@ -73,7 +73,7 @@
           <p class="text-xl font-bold border-l-4 pl-4 mb-2">Our social accounts:</p>
           <p class="my-1 hover:text-blue-700 duration-200"><a href="https://www.facebook.com">Facebook <i class="fab fa-lg fa-facebook-square"></i></a></p>
           <p class="my-1 hover:text-blue-500 duration-200"><a href="https://www.twitter.com">Twitter <i class="fab fa-lg fa-twitter-square"></i></a></p>
-          <p class="my-1 hover:text-pink-500 duration-200"><a href="https://www.instagram.com">Instagram <i class="fab fa-lg fa-instagram-square"></i></a></p>
+          <p class="my-1 hover:text-pink-600 duration-200"><a href="https://www.instagram.com">Instagram <i class="fab fa-lg fa-instagram-square"></i></a></p>
           <p class="text-xl font-bold border-l-4 pl-4 mt-4 mb-2">Our channel:</p>
           <p class="my-1 hover:text-red-600 duration-200"><a href="https://www.youtube.com">Youtube <i class="fab fa-lg fa-youtube-square"></i></a></p>
           <p class="text-xl font-bold border-l-4 pl-4 mt-4 mb-2">Find Us:</p>
